--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "@smastrom/react-rating": "^1.3.2",
     "class-variance-authority": "^0.7.0",
     "localforage": "^1.10.0",
@@ -26,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.15.0",
     "sass": "^1.66.1",
     "sort-by": "^0.0.2",
